adm-kub/kuber-homeworks/1.5/data/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      multitool: backend
  template:
    metadata:
      labels:
        multitool: backend
    spec:
      containers:
      - name: backend
        image: wbitt/network-multitool:alpine-extra
        ports:
        - name: multitool-web          
          containerPort: 8080
