adm-kub/kuber-homeworks/1.5/data/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      nginx: frontend
  template:
    metadata:
      labels:
        nginx: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - name: nginx-web
          containerPort: 80
