adm-kub/kuber-homeworks/1.5/data/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    multitool: backend
  ports:
  - name: backend
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
