adm-kub/kuber-homeworks/1.5/data/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    nginx: frontend
  ports:
  - name: frontend
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
